# irrlicht-mod

./: .gitignore  CMakeLists.txt  README.md
include/: IrrCompileConfig.h
source/Irrlicht/: CIrrDeviceSDL2.cpp  CIrrDeviceSDL2.h  COpenGLDriver.cpp  os.cpp
